Fixed layout bug in FF and Chrome

--- a/src/RedKiteLabs/RedKiteCms/RedKiteCmsBundle/Resources/public/css/skins/bootstrap/skin_3.x.css
+++ b/src/RedKiteLabs/RedKiteCms/RedKiteCmsBundle/Resources/public/css/skins/bootstrap/skin_3.x.css
@@ -14,8 +14,8 @@
 }
 
 .rk-cp-row {
-  height: 36px;
-  padding: 6px;
+  padding: 6px 0 0 6px;
+  line-height: 28px;
 }
 
 .elfinder-button, .elfinder-button:before, .elfinder-button:after {
